up to date with duncan's corrections to plots

--- a/AppResOutput/1_abccare_all.tex
+++ b/AppResOutput/1_abccare_all.tex
@@ -2,7 +2,7 @@
 
 \setlength\tabcolsep{0.3em}
 
-\subsection{{Combining Functions, Aggregated}}
+\section{Combining Functions, Aggregated}
 
 
 	\begin{table}[H]
@@ -24,7 +24,7 @@
 	\end{table}  
 \clearpage
 
-\subsection{{Combining Functions, by Category}}
+\section{Combining Functions, by Category}
 
 
 	\begin{table}[H]
@@ -64,7 +64,7 @@
 	\end{table}   
 \clearpage
 
-\subsection{Treatment Effects for Pooled Sample}
+\section{Treatment Effects for Pooled Sample}
 
 
 	\begin{table}[H]
@@ -390,7 +390,7 @@
      \label{table:abccare_rslt_pooled_cat53}
 	\input{AppResOutput/abccare/rslt_pooled_cat53}
 	\end{table} 
-\subsection{Treatment Effects for Male Sample}
+\section{Treatment Effects for Male Sample}
 
 
 	\begin{table}[H]
@@ -716,7 +716,7 @@
      \label{table:abccare_rslt_male_cat53}
 	\input{AppResOutput/abccare/rslt_male_cat53}
 	\end{table} 
-\subsection{Treatment Effects for Female Sample}
+\section{Treatment Effects for Female Sample}
 
 
 	\begin{table}[H]
@@ -1044,7 +1044,7 @@
 	\end{table} 
 \clearpage
 
-\subsection{Treatment Effects for Pooled Sample, Step Down}
+\section{Treatment Effects for Pooled Sample, Step Down}
 
 
 	\begin{table}[H]
@@ -1370,7 +1370,7 @@
      \label{table:abccare_rslt_pooled_cat53_sd}
 	\input{AppResOutput/abccare/rslt_pooled_cat53_sd}
 	\end{table} 
-\subsection{Treatment Effects for Male Sample, Step Down}
+\section{Treatment Effects for Male Sample, Step Down}
 
 
 	\begin{table}[H]
@@ -1696,7 +1696,7 @@
      \label{table:abccare_rslt_male_cat53_sd}
 	\input{AppResOutput/abccare/rslt_male_cat53_sd}
 	\end{table} 
-\subsection{Treatment Effects for Female Sample, Step Down}
+\section{Treatment Effects for Female Sample, Step Down}
 
 
 	\begin{table}[H]
