--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -38,7 +38,7 @@ The University of Chicago}
 
 \doublespacing
 \begin{abstract}
-\noindent This paper uses data from two high-quality randomized controlled trials and multiple non-experimental sources to provide a life-cycle cost-benefit analysis of early childhood education programs, as well as an understanding of its components. We define and estimate parameters that have a link with different policy-evaluation questions. We explore the outcome categories that are most important when accounting for the programs' costs and benefits and formalize an alternative to the standard solution to multiple hypothesis testing \citep{Lehman_Romano_2005_AnnStat,Romano_Shaikh_2006_AnnStat}. Our estimates indicate that early childhood education programs are socially efficient by documenting a benefit-to-cost ratio of \bcp\  (s.e. \bcsep) and an internal rate of return of \irrp\  (s.e. \irrsep). Multiple instances of sensitivity analysis show that these estimates are robust to various perturbations of the parameters and assumptions in the cost-benefit analysis.
+\noindent This paper uses data from two high-quality randomized controlled trials and multiple non-experimental sources to provide a life-cycle cost-benefit analysis of early childhood education programs, as well as an understanding of its components. We define and estimate parameters that have a link with different policy-evaluation questions. We explore the outcome categories that are most important when accounting for the programs' costs and benefits. Short-term treatment-group parents' labor income and long-term labor income, health improvements, and reduction in criminal activity of the treated children are the main drivers of the benefits of the programs. Our estimates indicate that early childhood education programs are socially efficient by documenting a benefit-to-cost ratio of \bcp\  (s.e. \bcsep) and an internal rate of return of \irrp\  (s.e. \irrsep). Multiple instances of sensitivity analysis show that these estimates are robust to various perturbations of the parameters and assumptions in the cost-benefit analysis. The results strengthen when accounting for the fact that the parents of the control-group children in both programs enrolled their children in preschool substitutes.
 \end{abstract} 
 
 \singlespacing
@@ -562,7 +562,7 @@ Working, if working age & $\times$ & $\times$ & \checkmark & \checkmark \\
 \caption{Cost-benefit Analysis Accounting for Control Substitution, ABC and CARE}
 \label{table:cbacs}
 \centering
-\input{output/cba_summary.tex}
+\input{output/cba_summary_controls_trim.tex}
 \begin{tablenotes}
 \item Note: This table displays estimates of the internal rate of return (IRR) and the benefit-to-cost ratio (B/C) for ABC and CARE for three cases. Not accounting for control substitution (baseline); comparing ABC and CARE to staying at home (relative to staying at home); and comparing ABC to alternative preschools (relative to alternative preschools). For the B/C we use a discount rate of $3\%$. We test the null hypotheses $\text{IRR} = 3\%$ and $\text{B/C} = 1$---we elect $3\%$ because that is the discount rate we use. The results in bold are significant at the 10\% level in a single-sided, non-parametric, bootstrapped test. We resample both the experimental and the auxiliary data sources.
 \end{tablenotes}
