--- a/Appendices/MoreOutcomes.tex
+++ b/Appendices/MoreOutcomes.tex
@@ -4,7 +4,7 @@
 
 \noindent To illustrate the difference between the outcomes in this appendix and the outcomes in Section~\ref{section:results}, consider two outcomes related to employment. In Section~\ref{section:results}, we include employment at age 30. In this appendix, we include both employment at age 30 and job satisfaction at age 30. Job satisfaction is a subjective variable, and it is not as clear what the effect of treatment on outcome is.\\
 
-\noindent Table~\ref{table:abccare_rslt_pooled_counts_all} presents the results for the pooled sample, and Table~\ref{table:abccare_rslt_male_counts_all} and \ref{table:abccare_rslt_female_counts_all} present the results for males and females. It is still the case both that (i) we find a majority of positive treatment effects; and (ii) more than 10\% of these positive treatment effects are significant at the 10\%. It is true that the results weaken if compared to those we consider in Section~\ref{section:results}, but this is expected given how we construct the lists of outcomes. Appendix~\ref{appendix:morebycat} present the results by categories.
+\noindent Table~\ref{table:abccare_rslt_pooled_counts_all} presents the results for the pooled sample, and Table~\ref{table:abccare_rslt_male_counts_all} and \ref{table:abccare_rslt_female_counts_all} present the results for males and females. It is still the case both that (i) we find a majority of positive treatment effects; and (ii) more than 10\% of these positive treatment effects are significant at the 10\%. It is true that the results weaken if compared to those we consider in Section~\ref{section:results}, but this is expected given how we construct the lists of outcomes. Appendix~\ref{appendix:morebycat} present the results by categories. We present the detailed point estimates in an additional appendix, for brevity.
 
 	\begin{table}[H]
      \caption{Combining Functions, Pooled Sample} 
