--- a/output/crime_balance.tex
+++ b/output/crime_balance.tex
@@ -42,8 +42,7 @@
     We also present the $p$-values from multiple testing, where we collectively test the
     baseline characteristics within the blocks separated by the horizontal line.
     Both $p$-values are two-sided and non-parametric. We construct them 
-    based on 200 re-draws of the full sample. The estimates we display are the means of 
-    the empirical bootstrap distribution. 
+    based on 200 re-draws of the full sample.
     
     \end{tablenotes}
   \end{threeparttable}
