--- a/output/sensitivity.tex
+++ b/output/sensitivity.tex
@@ -4,24 +4,24 @@
 \cmidrule(lr){2-4}      \cmidrule(lr){5-7}      \cmidrule(lr){8-10}																				
 Removed Component       &       NPV     &       IRR     &       B/C     &       NPV     &       IRR     &       B/C     &       NPV     &       IRR     &       B/C     \\																				
 \midrule																				
-None	&		&	0.09	&	2.35	&		&	\textbf{0.15}	&	\textbf{11.24}	&		&	\textbf{0.13}	&	\textbf{5.63}	\\	
+None	&	124,705 &	 0.09	&	2.35	&	953,113	&	\textbf{0.15}	&	\textbf{11.24}	&	430,616 &	\textbf{0.13}	&	\textbf{5.63}	\\	
 	&		&	(0.07)	&	(1.09)	&		&	(0.05)	&	(4.60)	&		&	(0.04)	&	(2.15)	\\ \\	
-Parental Income	&	\textbf{127,883}	&	0.04	&	0.96	&	\textbf{96,178}	&	\textbf{0.12}	&	\textbf{10.18}	&	\textbf{119,346}	&	\textbf{0.08}	&	\textbf{4.34}	\\	
-	&	(42,958)	&	(0.02)	&	(0.97)	&	(40,425)	&	(0.04)	&	(4.62)	&	(26,048)	&	(0.03)	&	(2.03)	\\	
+Parental Income	&	127,883	&	0.04	&	0.96	&	96,178	&	\textbf{0.12}	&	\textbf{10.18}	&	119,346	&	\textbf{0.08}	&	\textbf{4.34}	\\	
+	&		&	(0.02)	&	(0.97)	&		&	(0.04)	&	(4.62)	&		&	(0.03)	&	(2.03)	\\	
 Subject QALY	&	-2,551	&	\textbf{0.11}	&	2.39	&	144,405	&	\textbf{0.14}	&	\textbf{9.52}	&	83,896	&	\textbf{0.12}	&	\textbf{4.69}	\\	
-	&	(53,531)	&	(0.08)	&	(1.02)	&	(127,035)	&	(0.06)	&	(4.43)	&	(68,560)	&	(0.05)	&	(2.09)	\\	
+	&		&	(0.08)	&	(1.02)	&		&	(0.06)	&	(4.43)	&		&	(0.05)	&	(2.09)	\\	
 Subject Labor Income	&	42,387	&	0.08	&	1.88	&	187,785	&	\textbf{0.14}	&	\textbf{9.04}	&	120,839	&	\textbf{0.12}	&	\textbf{4.27}	\\	
-	&	(71,786)	&	(0.08)	&	(0.79)	&	(246,087)	&	(0.05)	&	(3.84)	&	(101,252)	&	(0.05)	&	(1.94)	\\	
+	&		&	(0.08)	&	(0.79)	&		&	(0.05)	&	(3.84)	&		&	(0.05)	&	(1.94)	\\	
 Subject Transfer Income	&	465	&	0.10	&	2.34	&	-3,176	&	\textbf{0.15}	&	\textbf{11.27}	&	-2,782	&	\textbf{0.13}	&	\textbf{5.66}	\\	
-	&	(9,091)	&	(0.08)	&	(1.10)	&	(9,503)	&	(0.04)	&	(4.62)	&	(5,700)	&	(0.04)	&	(2.15)	\\	
+	&		&	(0.08)	&	(1.10)	&		&	(0.04)	&	(4.62)	&		&	(0.04)	&	(2.15)	\\	
 Medical Expenditures	&	-5,877	&	0.10	&	2.41	&	-35,480	&	\textbf{0.15}	&	\textbf{11.62}	&	-26,630	&	\textbf{0.14}	&	\textbf{5.92}	\\	
-	&	(21,453)	&	(0.08)	&	(1.14)	&	(29,405)	&	(0.04)	&	(4.57)	&	(17,725)	&	(0.04)	&	(2.15)	\\	
-Control Contamination	&	\textbf{16,815}	&	0.08	&	2.16	&	\textbf{14,291}	&	\textbf{0.14}	&	\textbf{11.08}	&	\textbf{15,583}	&	\textbf{0.11}	&	\textbf{5.46}	\\	
-	&	(1,859)	&	(0.05)	&	(1.09)	&	(1,639)	&	(0.04)	&	(4.59)	&	(1,263)	&	(0.04)	&	(2.15)	\\	
+	&		&	(0.08)	&	(1.14)	&		&	(0.04)	&	(4.57)	&		&	(0.04)	&	(2.15)	\\	
+Control Contamination	&	16,815	&	0.08	&	2.16	&	14,291	&	\textbf{0.14}	&	\textbf{11.08}	&	15,583	&	\textbf{0.11}	&	\textbf{5.46}	\\	
+	&		&	(0.05)	&	(1.09)	&		&	(0.04)	&	(4.59)	&		&	(0.04)	&	(2.15)	\\	
 Education Costs	&	-34,839	&	0.10	&	\textbf{2.72}	&	4,876	&	\textbf{0.14}	&	\textbf{11.18}	&	-12,294	&	\textbf{0.13}	&	\textbf{5.76}	\\	
-	&	(10,875)	&	(0.07)	&	(1.09)	&	(11,213)	&	(0.04)	&	(4.63)	&	(7,379)	&	(0.04)	&	(2.15)	\\	
-Crime Costs	&	\textbf{73,673}	&	0.08	&	1.54	&	\textbf{607,235}	&	\textbf{0.10}	&	4.53	&	215,441	&	\textbf{0.10}	&	\textbf{3.24}	\\	
-	&	(34,120)	&	(0.08)	&	(0.99)	&	(346,811)	&	(0.05)	&	(3.10)	&	(163,885)	&	(0.04)	&	(1.34)	\\ \\	
+	&		&	(0.07)	&	(1.09)	&		&	(0.04)	&	(4.63)	&		&	(0.04)	&	(2.15)	\\	
+Crime Costs	&	73,673	&	0.08	&	1.54	&	607,235	&	\textbf{0.10}	&	4.53	&	215,441	&	\textbf{0.10}	&	\textbf{3.24}	\\	
+	&		&	(0.08)	&	(0.99)	&		&	(0.05)	&	(3.10)	&		&	(0.04)	&	(1.34)	\\ \\	
 Deadweight Loss	&		&	0.14	&	\textbf{3.37}	&		&	\textbf{0.18}	&	\textbf{16.74}	&		&	\textbf{0.19}	&	\textbf{8.37}	\\	
 	&		&	(0.12)	&	(1.64)	&		&	(0.06)	&	(6.95)	&		&	(0.07)	&	(3.22)	\\	
 0\% Discount Rate	&		&		&	4.52	&		&		&	\textbf{28.35}	&		&		&	\textbf{14.11}	\\	
