own back of the envenvelope

--- a/AppOutput/Health/ABCCARE_health_at_65_table.tex
+++ b/AppOutput/Health/ABCCARE_health_at_65_table.tex
@@ -1,9 +1,9 @@
 \begin{tabular}{lcccc} \toprule
- & \multicolumn{2}{c}{Female} & \multicolumn{2}{c}{Female} \\
+ & \multicolumn{2}{c}{Female} & \multicolumn{2}{c}{Male} \\
  & Control  & Treatment  & Control  & Treatment  \\  \midrule 
-Cancer              &     0.198 &     0.131 &     0.000 &     0.036 \\  
-Diabetes           &     0.319 &     0.298 &     0.129 &     0.366 \\  
-Heart Diseases  &     0.158 &     0.211 &     0.110 &     0.105 \\  
-Hypertension    &     0.816 &     0.813 &     0.484 &     0.631 \\  
-Lunge Disease  &     0.172 &     0.228 &     0.187 &     0.095 \\  
-Stroke Disease &     0.098 &     0.062 &     0.071 &     0.036 \\  \toprule \end{tabular}
+Cancer &     0.198 &     0.131 &     0.000 &     0.036 \\  
+Diabetes &     0.319 &     0.298 &     0.129 &     0.366 \\  
+Heart Diseases &     0.158 &     0.211 &     0.110 &     0.105 \\  
+Hypertension &     0.816 &     0.813 &     0.484 &     0.631 \\  
+Lung Disease &     0.172 &     0.228 &     0.187 &     0.095 \\  
+Stroke &     0.098 &     0.062 &     0.071 &     0.036 \\ \toprule \end{tabular}
