--- a/abc_comprehensivecba_slides_2016-08-10b_jlg.tex
+++ b/abc_comprehensivecba_slides_2016-08-10b_jlg.tex
@@ -4,7 +4,7 @@
 %% this file. Also please read the Beamer Reference document for typists if you have any questions
 %% on the usage of this template.
 % -------------------------------------------------------------------------------------------------
-\documentclass[static]{JJH-Beamer}
+\documentclass[print]{JJH-Beamer}
 
 %% -- Extra Packages (Place Packages here if they are not included in the default template)--------
 
@@ -43,9 +43,9 @@
 
 % ------------ Title, author, date (ALWAYS UPDATE THESE THINGS) -----------------------------------
 
-\def \thetitle {Analyzing the Short- and Long-term Effects of Early Childhood Education on Multiple Dimensions of Human Development} % Full title goes here
+\def \thetitle {The Long-term Economic and Social Benefits of an Influential Early Childhood Intervention} % Full title goes here
 
-\def \theshorttitle {Analyzing Early Childhood Education} %Short title goes here
+\def \theshorttitle {Benefits of Early Childhood Intervention} %Short title goes here
 
 \def \theauthor {Jorge Luis Garc\'{i}a, James J. Heckman, Andr\'{e}s Hojman,\\ Duncan Ermini Leaf, Mar\'{i}a Jos\'{e} Prados, \\ Joshua Shea, Jake Torcasso} % Author name(s) go here
 
@@ -801,6 +801,48 @@ We estimate the treatment effects on $\hat{Y}$
 \end{frame}
 
 %% ---------------------------------------------------------------------------
+
+
+\begin{frame}
+\frametitle{Preview of Results: Treatment Effects}
+\begin{figure}
+\caption{Proportion of Outcomes with a Positive Treatment Effect}
+	\includegraphics[width=20em]{output/itt_noctrl_all.eps}
+\end{figure}
+$\rightarrow$ Strengthen when accounting for substitution bias
+\end{frame}
+
+\begin{frame}
+\frametitle{Preview of Results: Treatment Effects}
+\begin{figure}
+\caption{Proportion of Outcomes with a Positive Treatment Effect}
+	\includegraphics[width=20em]{output/itt_noctrl_all.eps}
+\end{figure}
+$\rightarrow$ Strengthen when accounting for substitution bias
+\end{frame}
+
+\begin{frame}[plain]
+\begin{figure}
+\caption{Life-cycle Net Present Value of Main Component of the CBA, Males and Females}
+	\includegraphics[width=20em]{output/abccare_npvs3.eps}
+\end{figure}
+\end{frame}
+
+\begin{frame}[plain]
+\begin{figure}
+\caption{Life-cycle Net Present Value of Main Component of the CBA, Males}
+	\includegraphics[width=20em]{output/abccare_npvs2.eps}
+\end{figure}
+\end{frame}
+
+\begin{frame}[plain]
+\begin{figure}
+\caption{Life-cycle Net Present Value of Main Component of the CBA, Females}
+	\includegraphics[width=20em]{output/abccare_npvs1.eps}
+\end{figure}
+\end{frame}
+
+
 \begin{frame}
 \frametitle{Results and Sensitivity Analysis}
 \begin{center}
