adding back of the envelope

--- a/heckman.bib
+++ b/heckman.bib
@@ -31365,16 +31365,6 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Timestamp                = {2009.04.09}
 }
 
-@TechReport{Goldman_etal_2015_Future-America-Model,
-  Title                    = {{The {Future America Model}: Technical Documentation}},
-  Author                   = {Goldman, Dana P. and Tysinger, Bryan and Ermini Leaf, Duncan},
-  Institution              = {Working Document},
-  Year                     = {2015},
-
-  Owner                    = {Jenna},
-  Timestamp                = {2015.12.16}
-}
-
 @Article{Goldman_Smith_2011_EducationValue_SSaM,
   Title                    = {The Increasing Value of Education to Health},
   Author                   = {Goldman, Dana, and Smith, James P.},
@@ -31713,17 +31703,6 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Timestamp                = {2014.06.19}
 }
 
-@Article{Gorman_1980_RESTUD,
-  Title                    = {A possible procedure for analysing quality differentials in the egg market},
-  Author                   = {Gorman, W. M.},
-  Journal                  = {The Review of Economic Studies},
-  Year                     = {1980},
-  Pages                    = {843-856},
-
-  Owner                    = {Alexandra},
-  Timestamp                = {2014.07.22}
-}
-
 @Article{Gorman_1980_REStud,
   Title                    = {A Possible Procedure for Analysing Quality Differentials in the Egg Market},
   Author                   = {W. M. Gorman},
@@ -31736,6 +31715,17 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Volume                   = {47},
 
   Owner                    = {Lynn}
+}
+
+@Article{Gorman_1980_RESTUD,
+  Title                    = {A possible procedure for analysing quality differentials in the egg market},
+  Author                   = {Gorman, W. M.},
+  Journal                  = {The Review of Economic Studies},
+  Year                     = {1980},
+  Pages                    = {843-856},
+
+  Owner                    = {Alexandra},
+  Timestamp                = {2014.07.22}
 }
 
 @Article{Gorman_1965_RES,
@@ -46805,6 +46795,16 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
 
   Owner                    = {Jessica Dyer},
   Timestamp                = {2015.10.30}
+}
+
+@Unpublished{Kline-Walters_2016_QJE,
+  Title                    = {Evaluating Public Programs with Close Substitutes: The Case of {H}ead {S}tart},
+  Author                   = {Kline, Patrick and Walters, Christopher},
+  Note                     = {Forthcoming, \emph{Quarterly Journal of Economics}},
+  Year                     = {2016},
+
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2016.08.18}
 }
 
 @TechReport{Kline-Walters_2015_NBER-Evaluating,
@@ -77206,6 +77206,16 @@ Robinson, Lara Rachel},
   Month                    = {16 January},
   Pages                    = {9--16},
   Volume                   = {14}
+}
+
+@TechReport{Goldman_etal_2015_Future-America-Model,
+  Title                    = {{The {Future America Model}: Technical Documentation}},
+  Author                   = {Tysinger, Bryan and Leaf, Duncan Ermini and Goldman, Dana P.},
+  Institution              = {Working Document},
+  Year                     = {2015},
+
+  Owner                    = {Jenna},
+  Timestamp                = {2015.12.16}
 }
 
 @Unpublished{USCongress_2002_NoChildLeftBehind,
