--- a/output/abc_cohorts.tex
+++ b/output/abc_cohorts.tex
@@ -7,15 +7,15 @@
 VARIABLES & mdi0y6m & mdi1y \\ \hline
  &  &  \\
 treat\_cohort\_1 & 4.841 & -2.901 \\
- & (6.013) & (5.926) \\
+ & (5.840) & (5.838) \\
 treat\_cohort\_2 & 0.071 & 1.882 \\
- & (6.013) & (5.830) \\
+ & (5.840) & (5.744) \\
 treat\_cohort\_3 & 9.143 & 10.038* \\
- & (5.801) & (5.926) \\
-treat\_cohort\_4 & 7.829 & 13.713** \\
- & (5.801) & (5.830) \\
+ & (5.635) & (5.838) \\
+treat\_cohort\_4 & 4.586 & 9.333* \\
+ & (4.741) & (4.887) \\
  &  &  \\
-Observations & 112 & 110 \\
- R-squared & 0.055 & 0.110 \\ \hline
+Observations & 135 & 132 \\
+ R-squared & 0.040 & 0.081 \\ \hline
 \end{tabular}
 \end{document}
