PQ included in Vregs

--- a/output/abccare_Vregs1.tex
+++ b/output/abccare_Vregs1.tex
@@ -1,15 +1,15 @@
-\begin{tabular}{lcccc} \hline
- & (1) & (2) & (3) & (4) \\
- & years\_30y1P & years\_30y1Q & si30y\_works\_job1P & si30y\_works\_job1Q \\
-VARIABLES & years\_30y & years\_30y & si30y\_works\_job & si30y\_works\_job \\ \hline
- &  &  &  &  \\
-P & 1.763* &  & -0.015 &  \\
- & (0.906) &  & (0.264) &  \\
-Q &  & 0.018 &  & -0.003 \\
- &  & (0.020) &  & (0.006) \\
- &  &  &  &  \\
-Observations & 29 & 29 & 29 & 29 \\
- R-squared & 0.283 & 0.188 & 0.132 & 0.146 \\ \hline
-\multicolumn{5}{c}{ Standard errors in parentheses} \\
-\multicolumn{5}{c}{ *** p$<$0.01, ** p$<$0.05, * p$<$0.10} \\
+\begin{tabular}{lcccccc} \hline
+ & (1) & (2) & (3) & (4) & (5) & (6) \\
+ & years\_30y1P & years\_30y1Q & years\_30y1PQ & si30y\_works\_job1P & si30y\_works\_job1Q & si30y\_works\_job1PQ \\
+VARIABLES & years\_30y & years\_30y & years\_30y & si30y\_works\_job & si30y\_works\_job & si30y\_works\_job \\ \hline
+ &  &  &  &  &  &  \\
+P & 1.763* &  & 2.588* & -0.015 &  & 0.236 \\
+ & (0.906) &  & (1.385) & (0.264) &  & (0.402) \\
+Q &  & 0.018 & -0.023 &  & -0.003 & -0.007 \\
+ &  & (0.020) & (0.029) &  & (0.006) & (0.009) \\
+ &  &  &  &  &  &  \\
+Observations & 29 & 29 & 29 & 29 & 29 & 29 \\
+ R-squared & 0.283 & 0.188 & 0.303 & 0.132 & 0.146 & 0.160 \\ \hline
+\multicolumn{7}{c}{ Standard errors in parentheses} \\
+\multicolumn{7}{c}{ *** p$<$0.01, ** p$<$0.05, * p$<$0.10} \\
 \end{tabular}
