--- a/output/abccare_Vregs0.tex
+++ b/output/abccare_Vregs0.tex
@@ -1,15 +1,15 @@
-\begin{tabular}{lcccc} \hline
- & (1) & (2) & (3) & (4) \\
- & years\_30y0P & years\_30y0Q & si30y\_works\_job0P & si30y\_works\_job0Q \\
-VARIABLES & years\_30y & years\_30y & si30y\_works\_job & si30y\_works\_job \\ \hline
- &  &  &  &  \\
-P & 2.829*** &  & 0.353* &  \\
- & (0.972) &  & (0.183) &  \\
-Q &  & 0.041* &  & 0.002 \\
- &  & (0.021) &  & (0.004) \\
- &  &  &  &  \\
-Observations & 34 & 34 & 34 & 34 \\
- R-squared & 0.351 & 0.250 & 0.292 & 0.201 \\ \hline
-\multicolumn{5}{c}{ Standard errors in parentheses} \\
-\multicolumn{5}{c}{ *** p$<$0.01, ** p$<$0.05, * p$<$0.10} \\
+\begin{tabular}{lcccccc} \hline
+ & (1) & (2) & (3) & (4) & (5) & (6) \\
+ & years\_30y0P & years\_30y0Q & years\_30y0PQ & si30y\_works\_job0P & si30y\_works\_job0Q & si30y\_works\_job0PQ \\
+VARIABLES & years\_30y & years\_30y & years\_30y & si30y\_works\_job & si30y\_works\_job & si30y\_works\_job \\ \hline
+ &  &  &  &  &  &  \\
+P & 2.829*** &  & 2.760* & 0.353* &  & 0.552** \\
+ & (0.972) &  & (1.374) & (0.183) &  & (0.252) \\
+Q &  & 0.041* & 0.002 &  & 0.002 & -0.006 \\
+ &  & (0.021) & (0.028) &  & (0.004) & (0.005) \\
+ &  &  &  &  &  &  \\
+Observations & 34 & 34 & 34 & 34 & 34 & 34 \\
+ R-squared & 0.351 & 0.250 & 0.351 & 0.292 & 0.201 & 0.325 \\ \hline
+\multicolumn{7}{c}{ Standard errors in parentheses} \\
+\multicolumn{7}{c}{ *** p$<$0.01, ** p$<$0.05, * p$<$0.10} \\
 \end{tabular}
